[gd_scene load_steps=16 format=3 uid="uid://bygcs4m5638w6"]

[ext_resource type="Shader" path="res://shaders/PaletteSwap.gdshader" id="1_wnmae"]
[ext_resource type="Script" path="res://scenes/objects/enemies/gabyoall.gd" id="2_bgnn4"]
[ext_resource type="Texture2D" uid="uid://bs0cnp36htwuf" path="res://sprites/enemies/gabyoall.png" id="3_77mhf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gtk0d"]
shader = ExtResource("1_wnmae")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3u8v0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q8fmh"]
atlas = ExtResource("3_77mhf")
region = Rect2(0, 84, 27, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0mp4"]
atlas = ExtResource("3_77mhf")
region = Rect2(0, 42, 27, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_erlsu"]
atlas = ExtResource("3_77mhf")
region = Rect2(0, 0, 27, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7obw"]
atlas = ExtResource("3_77mhf")
region = Rect2(0, 0, 27, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_e56gj"]
atlas = ExtResource("3_77mhf")
region = Rect2(0, 21, 27, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_isxqs"]
atlas = ExtResource("3_77mhf")
region = Rect2(0, 42, 27, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_ividu"]
atlas = ExtResource("3_77mhf")
region = Rect2(0, 63, 27, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_tubn0"]
atlas = ExtResource("3_77mhf")
region = Rect2(0, 63, 27, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_62nvj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8fmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0mp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8fmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erlsu")
}],
"loop": true,
"name": &"Fast",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7obw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e56gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isxqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ividu")
}],
"loop": true,
"name": &"Slow",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tubn0")
}],
"loop": true,
"name": &"Stopped",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wp5vq"]
size = Vector2(16, 16)

[node name="Gabyoall" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_gtk0d")
collision_layer = 0
collision_mask = 19
script = ExtResource("2_bgnn4")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_3u8v0")
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_62nvj")
animation = &"Fast"
autoplay = "Slow"
frame_progress = 0.0982196

[node name="hitable" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="MainHitbox" type="CollisionShape2D" parent="hitable"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_wp5vq")

[node name="hurt" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Hurtbox" type="CollisionShape2D" parent="hurt"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_wp5vq")
debug_color = Color(1, 0.00392157, 0.0705882, 0.419608)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_wp5vq")
debug_color = Color(0, 1, 0.0705882, 0.419608)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0.5, -4)
scale = Vector2(1.45, 1.2)
enable_node_path = NodePath("../VisibleOnScreenNotifier2D")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.5, -4.5)
scale = Vector2(9.75, 1.25)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RightDirCheck" type="RayCast2D" parent="."]
position = Vector2(4, 0)
target_position = Vector2(4, 0)
collision_mask = 17

[node name="LeftDirCheck" type="RayCast2D" parent="."]
position = Vector2(-4, 0)
target_position = Vector2(-4, 0)
collision_mask = 17

[node name="RightFloorCheck" type="RayCast2D" parent="."]
position = Vector2(7, 5)
target_position = Vector2(0, 1)
collision_mask = 17
hit_from_inside = true

[node name="LeftFloorCheck" type="RayCast2D" parent="."]
position = Vector2(-7, 5)
target_position = Vector2(0, 1)
collision_mask = 17
hit_from_inside = true

[connection signal="body_entered" from="hitable" to="." method="_on_hitable_body_entered"]
[connection signal="body_entered" from="hurt" to="." method="_on_hurt_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
